fixing the missing hash library dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,8 @@ install_requires =
     gevent
     gevent-websocket
     cabaliser
-
+    pycryptodome
+    
 [options.packages.find]
 where = src
 
